--- a/templates/cadastros.html
+++ b/templates/cadastros.html
@@ -3,9 +3,15 @@
 
 {% block content %}
 <div class="container text-center mt-5">
-    <div class="mt-4">
-        <h1>Cadastros</h1>
-        <p>Pesquisar</p>
-    </div>
+    <h2 class="text-center">Pesquisar Cadastro</h2>
+    <form method="POST" class="mt-4">
+        <div class="form-group">
+            <label for="searchQuery">Nome do pet:</label>
+            <input type="text" class="form-control" id="searchQuery" name="search_query" placeholder="Digite o nome do pet">
+        </div>
+        <div class="text-center mt-4">
+            <button type="submit" class="btn btn-primary">Pesquisar</button>
+        </div>
+    </form>
 </div>
 {% endblock %}
